Update Xu Xingshun 's personal page, zh-en in the same page

--- a/xuxingshun/index.html
+++ b/xuxingshun/index.html
@@ -17,7 +17,7 @@
         <span class="zh">徐兴顺</span>
         <span class="en">Xu XingShun</span>
       </h1>
-      <a id="language" href="" class="btn dim" style="vertical-align:bottom; text-align:right;">
+      <a id="language" href="" class="btn dim" style="vertical-align:bottom; float:right;">
         <span class="zh">English</span>
         <span class="en">中文</span>
       </a>
